# adas-weekly

./: .env.example  .gitignore  main.py  pyproject.toml
.claude/commands/: publish.md
.github/workflows/: weekly.yml
data/: sources.yaml
output/: index.html
output/2026-W13/: index.html
output/demo/: index.html
scripts/: com.momenta.adas-weekly.plist  run_and_push.sh
src/: models.py
src/collector/: bilibili.py  nextjs.py  rss.py  runner.py  web.py
src/generator/: executive_summary.py  report.py  tier_assign.py
src/generator/templates/: weekly.html.j2
src/processor/: llm.py  pipeline.py  runner.py  video_pipeline.py
