[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adas-weekly"
version = "0.1.0"
description = "Japanese ADAS weekly report generator for Chinese market intelligence"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "openai>=1.50",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "lxml>=5.0",
]

[project.scripts]
adas-weekly = "main:run"

[tool.hatch.build.targets.wheel]
packages = ["src"]
